<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <!--<item-->
        <!--android:id="@+id/action_settings_cal"-->
        <!--android:icon="@drawable/ic_settings_24dp"-->
        <!--android:title="@string/action_settings"-->
        <!--app:showAsAction="ifRoom"/>-->
    <item
        android:id="@+id/ic_action_overflow"
        android:title="@string/options"
        android:orderInCategory="101"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_overflow">

        <menu>

            <item android:id="@+id/day_view"
                app:showAsAction="ifRoom"
                android:title="@string/dayview" />

            <item android:id="@+id/three_day_view"
                app:showAsAction="ifRoom"
                android:title="@string/threedayview" />

            <item android:id="@+id/week_view"
                app:showAsAction="ifRoom"
                android:title="@string/weekview" />

            <item android:id="@+id/activity_preferences"
                app:showAsAction="ifRoom"
                android:title="Calendar Preferences" />

        </menu>

    </item>

</menu>