<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".StartActivity">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="183dp"
        android:src="@drawable/sync" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="102dp"
        android:text="@string/app_name"
        android:textColor="@color/colorWhite"
        android:textSize="30sp" />

    <Button
        android:id="@+id/start_reg_button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="195dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:background="@color/colorWhite"
        android:text="@string/need_a_new_account"
        android:textSize="12sp"
        android:textColor="@color/colorBlack"/>

    <Button
        android:id="@+id/start_login_button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="126dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:background="@color/colorAccent"
        android:text="@string/already_have_account"
        android:textSize="12sp"
        android:textColor="@color/colorWhite"/>
</RelativeLayout>